# llm-app

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
app/: main.py
app/chain/: search_image_chain.py  search_text_chain.py
app/controller/: places_controller.py
app/dto/: search_dto.py
app/helper/: object_id_converter.py
app/model/: clip_model.py
app/router/: places_router.py
app/usecase/: add_place_thumbail_usecase.py  get_embedding_places_usecase.py  get_places_by_ids_usecase.py  get_places_by_image_usecase.py  keyword_generator_usecase.py
app/watchers/: event_logic.py  event_watch.py
localize_ai_app/: main.py
localize_ai_app/ingest/: ingest_public_space.py
localize_ai_app/router/: places_router.py
localize_ai_app/usecase/: add_place_thumbail_usecase.py  get_places_by_ids_usecase.py
seed/ingest/: ingest_public_space.py
